Fix p wrap for IE 4

--- a/app/assets/stylesheets/portfolio.scss
+++ b/app/assets/stylesheets/portfolio.scss
@@ -71,6 +71,7 @@
   }
 
   .project-info {
+    display: -ms-flex;
     display: flex;
     flex-direction: column;
     align-items: center;
